fdo#35680 - fix wrong gradient rendering when grouped.